--- a/05.BindingDemo2/app/build.gradle
+++ b/05.BindingDemo2/app/build.gradle
@@ -2,6 +2,11 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 28
+
+    dataBinding {
+        enabled=true
+    }
+
     defaultConfig {
         applicationId "com.anushka.androidtutz.bindingdemo2"
         minSdkVersion 16
